--- a/.github/actions/pre-setup/action.yaml
+++ b/.github/actions/pre-setup/action.yaml
@@ -218,7 +218,7 @@ runs:
         $presetupdecision="$env:execute"
         $msg = "$env:executeReason"        
         Write-Host "Decision to Execute (true) or Cancel (false): $presetupdecision"
-        Write-Host "Decision to Execute (true) or Cancel (false) → Reason:  $msg"
+        Write-Host "Reason for Decision to Execute (true) or Cancel (false) → $msg"
         echo "pre-setup-decision=$presetupdecision" >> $env:GITHUB_OUTPUT
         echo "pre-setup-decision-reason=$msg" >> $env:GITHUB_OUTPUT
         
