--- a/.github/actions/setup-hygiene-env/action.yaml
+++ b/.github/actions/setup-hygiene-env/action.yaml
@@ -24,9 +24,6 @@ inputs:
     description: ""
 
 outputs:
-  startTime:
-    description: ""
-    value: ${{ steps.start_time.outputs.startTime }}
   COMMIT_MSG:
     description: ""
     value: ${{ steps.setup_vars.outputs.COMMIT_MSG }}
@@ -56,17 +53,8 @@ runs:
   using: "composite"
   steps:
 
-    # 1. Capture start time
-    - name: Capture Start Time
-      id: start_time
-      uses: ./.github/actions/setup-starttime
 
-    - name: Log Captured Start Time
-      run: |
-        echo "🕒 Workflow Start Time captured from setup-hygiene-env: ${{ steps.start_time.outputs.startTime }}"
-      shell: pwsh
-
-    - name: Setup common varaibles
+    - name: Setup common variables
       id: setup_vars
       shell: pwsh
       env:
